--- a/src/style/comment.less
+++ b/src/style/comment.less
@@ -1,1 +1,6 @@
-@header-background-color: dodgerblue;
+@button-default-bg-color: dodgerblue;
+@button-default-active-bg-color: dodgerblue;
+@button-default-disabled-bg-color: dodgerblue;
+@button-default-font-color: #fff;
+@button-default-active-font-color: #fff;
+@button-default-disabled-font-color: #fff;
