--- a/src/assets/css/assignedperformlist.css
+++ b/src/assets/css/assignedperformlist.css
@@ -1,5 +1,8 @@
 .content {
   height: 100%;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 0 10px;
 }
 li {
   height: 100px;
@@ -41,14 +44,16 @@ li > div {
   font-size: 12px;
   color: #00BE67;
 }
-.item-content i {
+.item-content > div {
   position: relative;
   z-index:999;
   font-size: 12px;
-  font-style: normal;
   color: #fff;
-  background-color: #2A91D8;
-  padding: 0 2px;
-  margin: 0 0 10px 20px;
+  margin-left: 10px;
   display: inline-block;
+}
+.item-content > div > i {
+  font-style: normal;
+  padding: 2px;
+  background-color: #2A91D8;
 }
