--- a/src/assets/css/comment.css
+++ b/src/assets/css/comment.css
@@ -1,15 +1,25 @@
-/* 主题内容左右边距 */
-.content {
-  padding: 0 10px;
-}
 /* 顶部固定定位 返回 上内边距*/
 .fixedpadding {
-  padding-top: 46px;
+  padding-top: 44px;
+  box-sizing: border-box;
 }
-.clearfix::after, .clearfix::before {
+.clearfix::after,
+.clearfix::before {
   content: '';
   height: 0;
   overflow: hidden;
   display: block;
   clear: both;
+}
+
+/* scorll list */
+.content_list {
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  padding: 0 10px;
+}
+
+.weui-cell {
+  font-size: 16px;
 }
